force-app/main/default/objects/Teacher_Class_Subj__c/Teacher_Class_Subj__c.object-meta.xml
<CustomObject>
    <label>Teacher Class Subject</label>
    <nameField>
        <displayFormat>TCSN-{00000}</displayFormat>
        <label>Teacher Class Subj Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teacher Class Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>