force-app/main/default/objects/Teacher_Class_Subj__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Teacher Class Subjects</relationshipLabel>
    <relationshipName>Teacher_Class_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>