force-app/main/default/objects/Teacher_Class_Subj__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Teacher Class Subjects</relationshipLabel>
    <relationshipName>Teacher_Class_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>