force-app/main/default/objects/Teacher_Class_Subj__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Teacher Class Subjects</relationshipLabel>
    <relationshipName>Teacher_Class_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>